# jira_timemachine

./: .buildinfo  .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .rstcheck.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.rst  authors.html  changelog.html  config.html  contributing.html  genindex.html  index.html  mypy.ini  objects.inv  pylintrc  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: authors.doctree  changelog.doctree  config.doctree  contributing.doctree  environment.pickle  index.doctree
.github/: PULL_REQUEST_TEMPLATE.rst  dependabot.yml
.github/workflows/: automerge.yml  build.yml  docker_build.yml  docker_latest.yaml  docker_tag.yaml  linters.yml  pr-check.yml  pre-commit.yml  sphinx-doc.yml  tests.yml
_sources/: index.rst.txt
docs/source/: conf.py  config.rst  index.rst
example_config/: config.sample.json
jira_timemachine/: __init__.py
newsfragments/: +38a28764.misc.rst  +5279c692.bugfix.rst  +87430cd9.bugfix.rst  +8dda02d3.misc.rst  +9c1604ec.feature.rst  +a995d4c0.break.rst  +b4cff35a.misc.rst  +df377c16.feature.rst  222.misc.rst  223.misc.rst  224.break.rst  225.misc.rst  226.misc.rst  231.misc.rst  247.bugfix.rst  268.misc.rst  284.feature.rst  285.misc.rst  286.feature.rst  338.break.rst  385.misc.rst  65.feature.rst
src/jira_timemachine/: __init__.py
tests/: test_unit.py
