[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']
include = '.*\.pyi?$'

[tool.mypy]
check_untyped_defs = true
mypy_path = "src"
incremental = true

[[tool.mypy.overrides]]
module = "jira_timemachine.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jira.*"]
ignore_missing_imports = true


[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://https://github.com/ClearcodeHQ/jira_timemachine/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneus"
showcontent = true
