[project]
name = "jira_timemachine"
version = "1.0.1"
description = "Synchronize worklogs between Jira instances"
readme = "README.rst"
keywords = ["jira", "worklog", "timesheet"]
license = {file = "LICENSE"}
authors = [
    {name = "Grzegorz Śliwiński", email = "fizyk+pypi@fizyk.dev"}
]
maintainers = [
    {name = "Michał Masłowski", email = "m.maslowski@clearcode.cc"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.10"
dependencies = [
    "arrow>=1.1.0",
    "Click>=8.0.1",
    "types-click>=7.1.0",
    "jira>=3.0.1",
    "pydantic>=2",
    "requests>=2.25.1",
    "types-requests>=0.1.9",
]

[project.urls]
"Source" = "https://github.com/ClearcodeHQ/jira_timemachine"
"Bug Tracker" = "https://github.com/ClearcodeHQ/jira_timemachine/issues"
"Changelog" = "https://github.com/ClearcodeHQ/jira_timemachine/blob/v1.0.1/CHANGES.rst"
"Documentation" = "https://clearcodehq.github.io/jira_timemachine/"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-jsonschema",
]

[project.scripts]
timemachine = "jira_timemachine:timemachine"
timecheck = "jira_timemachine:timecheck"

[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["jira_timemachine*"]
exclude = ["tests*"]
namespaces = false

[tool.black]
line-length = 120
target-version = ['py310']
include = '.*\.pyi?$'

[tool.mypy]
check_untyped_defs = true
mypy_path = "src"
incremental = true

[[tool.mypy.overrides]]
module = "jira_timemachine.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["jira.*"]
ignore_missing_imports = true


[tool.towncrier]
directory = "newsfragments"
single_file=true
filename="CHANGES.rst"
issue_format="`#{issue} <https://https://github.com/ClearcodeHQ/jira_timemachine/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "Features"
showcontent = true

[tool.towncrier.fragment.bugfix]
name = "Bugfixes"
showcontent = true

[tool.towncrier.fragment.break]
name = "Breaking changes"
showcontent = true

[tool.towncrier.fragment.misc]
name = "Miscellaneus"
showcontent = false

[tool.pytest.ini_options]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:'imghdr' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated and scheduled for removal in a future version.:DeprecationWarning',
]

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "1.0.1"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""


# For each file to patch, add a [[file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "jira_timemachine/__init__.py"

[[tool.tbump.file]]
src = "docs/source/conf.py"

[[tool.tbump.file]]
src = "README.rst"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = '"Changelog" = "https://github.com/ClearcodeHQ/jira_timemachine/blob/v{current_version}/CHANGES.rst"'

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "pipenv run towncrier build --version {new_version} --yes"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
