[metadata]
name = jira_timemachine
version = 1.0.0
url = https://github.com/ClearcodeHQ/jira_timemachine
description = Synchronize worklogs between Jira instances
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = jira, worklog, timesheet
license = MIT License
author = Grzegorz Śliwiński
author_email = fizyk+pypi@fizyk.net.pl
maintainer = Michał Masłowski
maintainer_email = m.maslowski@clearcode.cc
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = jira_timemachine
install_requires =
    arrow>=1.1.0
    Click>=8.0.1
    types-click>=7.1.0
    jira>=3.0.1
    pydantic>=1.8.2
    requests>=2.25.1
    types-requests>=0.1.9

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
docs =
    sphinx
    sphinx-jsonschema

[options.entry_points]
console_scripts =
    timemachine = jira_timemachine:timemachine
    timecheck = jira_timemachine:timecheck

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*

[pydocstyle]
match = '(?!docs|build|venv).*\.py'

[tool:pytest]
addopts =  -vvv --capture=no --showlocals --verbose --cov src/jira_timemachine --cov tests
testpaths = tests/
filterwarnings = error
xfail_strict = True
